[project]
name = "codex-imagegen"
version = "0.1.0"
description = "ComfyUI custom node that runs Codex CLI image generation and image editing workflows."
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/DocWorkBox/ComfyUI-Codex-ImageGen"
Documentation = "https://github.com/DocWorkBox/ComfyUI-Codex-ImageGen#readme"
"Bug Tracker" = "https://github.com/DocWorkBox/ComfyUI-Codex-ImageGen/issues"

[tool.comfy]
PublisherId = "zhaoke1006"
DisplayName = "Codex ImageGen"
requires-comfyui = ">=0.3.0"
